--- a/.github/workflows/AndroidBuilder.yml
+++ b/.github/workflows/AndroidBuilder.yml
@@ -46,12 +46,19 @@ jobs:
       - name: Install Flutter Dependencies
         run: flutter pub get
 
-      # Build APKs
-      - run: flutter build apk --debug --split-per-abi
+      # Generate Debug Keystore (Required for Signing)
+      - name: Generate Debug Keystore
+        run: |
+          mkdir -p ~/.android
+          keytool -genkeypair -v -keystore ~/.android/debug.keystore -storetype PKCS12 -keyalg RSA -keysize 2048 -validity 10000 \
+          -dname "CN=Android Debug,O=Android,C=US" -storepass android -keypass android -alias androiddebugkey
+
+      # Build Release APK (Signed with Debug Keystore)
+      - run: flutter build apk --release --split-per-abi
 
       # Upload APK (Only arm64-v8a)
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: flutter-apk
-          path: build/app/outputs/flutter-apk/app-arm64-v8a-debug.apk
+          path: build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
