--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   audiotags: ^1.4.1
   buttons_tabbar: ^1.3.13
   cached_network_image: ^3.4.0
+  cupertino_icons: ^1.0.8
   dio: ^5.7.0
   file_picker: ^8.0.6
   flutter:
