--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   flutter_lyric: ^2.0.4+6
   flutter_slidable: ^3.1.2
+  flutter_volume_controller: ^1.3.3
   get: ^4.7.1
   google_fonts: ^6.1.0
   hive: ^2.2.3
