--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  interactive_slider: ^0.5.1
   ionicons: ^0.2.2
   jni: ^0.14.0
   just_audio: ^0.9.46
