--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,10 @@ dependencies:
   google_fonts: ^6.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  interactive_slider: ^0.5.1
+  interactive_slider:
+    git:
+      url: https://github.com/Envoy-Z-Lab/interactive_slider.git
+      ref: master
   ionicons: ^0.2.2
   jni: ^0.14.0
   just_audio: ^0.9.46
