--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   toggle_switch: ^2.1.0
   tray_manager: ^0.2.3
   url_launcher: ^6.2.1
+  volume_controller: ^3.3.3
   widget_marquee: ^0.0.8
   window_manager: ^0.4.2
   youtube_explode_dart:
